# Personal-Investor

./: .gitignore  CARD_IMPLEMENTATION.md  MIGRATION_TO_FASTAPI.md
client/: drizzle.config.ts  package-lock.json  package.json
client-mobile/: App.tsx  app.json  metro.config.js  package-lock.json  package.json  tailwind.config.js
client-mobile/src/actions/: delete-transaction.ts  get-transactions.ts  transactions.ts
client-mobile/src/app/: index.tsx
client-mobile/src/lib/: auth.tsx  category-map-id.ts  category-meta.ts  utils.ts
client-mobile/src/navigation/: RootNavigator.tsx
client/src/actions/: bulk-import.ts  cards.ts  delete-transaction.ts  get-transactions.ts  transactions.ts
client/src/app/: globals.css  layout.tsx  page.tsx  provider.tsx
client/src/db/: index.ts  schema.ts  seed.ts
prisma/: schema.prisma
server/: pyproject.toml  requirements.txt
server/migrations/: env.py
server/migrations/versions/: 2d0765fe4722_remove_manual_from_payment_status_enum.py  59b7f904137e_add_user_model.py  6b70d8b3c47b_add_cards_reward_rules_and_card_id_on_.py  b3e7414b9fcb_create_transactions_table.py  bbb50d9bce74_add_payment_status_to_transactions.py  d151ac76ed89_add_users_table.py
server/src/: main.py
server/src/api/: auth.py  cards.py  transactions.py
server/src/core/: config.py  database.py  security.py
server/src/models/: __init__.py  user.py
server/src/models/cards/: __init__.py  cards.py
server/src/models/cashflow/: category.py  transaction.py
server/src/services/: auth_service.py
server/src/testing/: communication_tool.py
(+65 files in other folders)
